--- a/frontend/Lista_usuarios.html
+++ b/frontend/Lista_usuarios.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Productos</title>
-    <link rel="stylesheet" href="productos.css">
+    <title>Lista de Usuarios</title>
+    <link rel="stylesheet" href="usuarios.css">
 </head>
 <body>
     <header>
-        <h1>Lista de Productos</h1>
+        <h1>Lista de Usuarios</h1>
         <nav>
             <ul class="menu">
                 <li><a href="Ingresar_productos.html">Productos</a></li>
@@ -19,8 +19,10 @@
         </nav>
     </header>
     <div class="contenedor">
-        <div class="lista-productos" id="lista-productos"></div>
+        <div class="lista-usuarios" id="lista-usuarios">
+            <!-- Aquí se llenarán los usuarios -->
+        </div>
     </div>
-    <script src="pedidos.js"></script>
+    <script src="Lista_usuarios.js"></script>
 </body>
 </html>
