--- a/frontend/Ingresar_productos.html
+++ b/frontend/Ingresar_productos.html
@@ -14,6 +14,7 @@
                 <li><a href="Ingresar_productos.html">Productos</a></li>
                 <li><a href="Administrar_pedidos.html">Pedidos</a></li>
                 <li><a href="pedidos_cliente.html">Cliente</a></li>
+                <li><a href="Lista_usuarios.html">Usuarios</a></li>
             </ul>
         </nav>
         <button id="btn-cerrar" class="btn-cerrar">Cerrar</button>
