--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -21,6 +21,9 @@
         <button type="submit">Registrarse</button>
     </form>
 
+    <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
+
     <script src="registro.js"></script>
 </body>
 </html>
+
